--- a/docs/Teamdokumentation.adoc
+++ b/docs/Teamdokumentation.adoc
@@ -7,3 +7,8 @@ Vorname Nachname <email>
 
 == Einführung
 Dieses Dokument dient im Praktikum als Spielwiese für das Kennenlernen und praktische Üben von AsciiDoc und Teamarbeit mit Git.
+
+include::Teammitglieder.adoc[]
+
+include::Software.adoc[]
+
