Email Partner B aktualisiert

--- a/docs/Teamdokumentation.adoc
+++ b/docs/Teamdokumentation.adoc
@@ -1,8 +1,5 @@
 = Teamdokumentation
-Vorname Nachname <email>
-
-Adriana Abraheem adriana.abraheem@stud.htw-dresden.de
-
+Adriana Abraheem <adriana.abraheem@stud.htw-dresden.de>
 0.1, 01.09.2019
 :toc:
 :toc-title: Inhaltsverzeichnis
