Aufgabe 2.2 - Person C - Teil 2

--- a/docs/Teamdokumentation.adoc
+++ b/docs/Teamdokumentation.adoc
@@ -1,5 +1,5 @@
 = Teamdokumentation
-Vorname Nachname <email>
+Jeremy Ziegert <jeremy.ziegert@stud.htw-dresden.de>
 0.1, 01.09.2019
 :toc:
 :toc-title: Inhaltsverzeichnis
